# crafty-gis

./: .commit_msg  .gitattributes  .github_repo.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRAFTY THOUGHTS.txt  LICENSE  QUICKSTART.md  README.md  build-frontend.py  install.ps1  install.sh  start.bat  start.sh
GIT_STAR/: .dockerignore  .gitignore  AGRICULTURE_GIS_RS_MASTER_INVENTORY.md  COMPLETE_AGRICULTURE_GIS_RS_460_REPO_MASTER.json  COMPLETE_AGRICULTURE_GIS_RS_460_REPO_MASTER.md  Dockerfile  Spatial_Autocorrelation_Assignment (AutoRecovered).docx  Spatial_Autocorrelation_Assignment_ENHANCED.docx  Spatial_Autocorrelation_Assignment_FINAL.docx  add_end_image.py  anti_gravity_agent.py  anti_gravity_agent_blueprint.md  app.py  biological_github_harvester.py  dump_docx.py  dumped_doc.txt  extract_images.py  extracted_step.txt  generate_backgrounds.py  generate_charts.py  generate_figures.py  generate_workspace_output.py  ndvi_output.csv  pulled_output.txt  refactor.py  refactor_images.py  test_output.docx  test_python_docx.docx  test_replace.py  unified_biological_manifest.json  user_json.txt  user_pasted_clipboard_long_content_as_file_# AGRICULTURE + GIS.txt  user_request_full.txt  ~$atial_Autocorrelation_Assignment.docx  ~$atial_Autocorrelation_Assignment_ENHANCED.docx
awesome-vibe-coding/: .gitignore  LICENSE  README-CN.md  README-JP.md  README-KR.md  README-PT.md  README.md  contributing.md  (+2 more)
crafty-gis/src-tauri/: Cargo.toml  generate-icons.py  tauri.conf.json
crafty-gis/src-tauri/capabilities/: default.json
crafty-gis/src-tauri/src/: lib.rs  main.rs
(+826 files in other folders)
