[package]
name = "crafty-gis"
version = "1.0.0"
description = "CRAFTY GIS — Conversational Remote Analysis & Field Technology for GIS"
authors = ["Virahit Vin <virahitvin8@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "crafty_gis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
